--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.10"
 dbt-core = "^1.8.0"
 dbt-snowflake = "^1.8.0"
+astronomer-cosmos = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
