--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mypy = "^1.8.0"
 isort = "^5.12"
 pre-commit = "^3.2"
 flake8 = "^7.0.0"
+pytest = "8.0.0"
 
 [build-system]
 requires = ["poetry-core"]
